resources/ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ass.crt.house
    nginx.org/websocket-services: home-assistant
spec:
  ingressClassName: nginx-internal
  rules:
    - host: "ass.crt.house"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  number: 8123
  tls:
    - hosts:
      - ass.crt.house
